MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.22', folder: 'D:\Keil_v5\ARM\ARMCC_V6.22\Bin'
Rebuild target 'ALM_ETH'
assembling startup_stm32h563xx.s...
compiling main.c...
compiling fdcan.c...
compiling stm32h5xx_hal_flash_ex.c...
compiling stm32h5xx_hal_msp.c...
compiling stm32h5xx_hal_eth_ex.c...
compiling stm32h5xx_hal_flash.c...
compiling usb.c...
compiling eth.c...
compiling stm32h5xx_hal_pwr.c...
compiling stm32h5xx_hal_gpio.c...
../Core/Src/lwip_app.c(102): error: call to undeclared function 'HAL_GetTick'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  102 |   uint32_t now = HAL_GetTick();
      |                  ^
1 error generated.
compiling lwip_app.c...
compiling stm32h5xx_hal_cortex.c...
compiling icache.c...
compiling ethernetif.c...
compiling dcache.c...
compiling stm32h5xx_it.c...
compiling gpio.c...
compiling sys_arch.c...
compiling linked_list.c...
compiling octospi.c...
compiling dns.c...
compiling stm32h5xx_hal_pwr_ex.c...
compiling stm32h5xx_hal_exti.c...
compiling stm32h5xx_hal_icache.c...
compiling bsp_lan8742.c...
compiling init.c...
compiling def.c...
compiling stm32h5xx_hal.c...
compiling stm32h5xx_ll_dlyb.c...
compiling stm32h5xx_hal_dcache.c...
compiling stm32h5xx_hal_pcd_ex.c...
compiling stm32h5xx_hal_rcc.c...
compiling system_stm32h5xx.c...
compiling stm32h5xx_hal_dma.c...
compiling ip.c...
compiling stm32h5xx_hal_fdcan.c...
compiling mem.c...
compiling stm32h5xx_ll_usb.c...
compiling inet_chksum.c...
compiling stm32h5xx_hal_pcd.c...
compiling stm32h5xx_hal_eth.c...
compiling stm32h5xx_hal_xspi.c...
compiling raw.c...
compiling stats.c...
compiling sys.c...
compiling memp.c...
compiling netif.c...
compiling stm32h5xx_hal_dma_ex.c...
compiling altcp.c...
compiling stm32h5xx_hal_rcc_ex.c...
compiling altcp_alloc.c...
compiling altcp_tcp.c...
compiling timeouts.c...
compiling igmp.c...
compiling tcp_in.c...
compiling pbuf.c...
compiling autoip.c...
compiling err.c...
compiling udp.c...
compiling icmp.c...
compiling ethernet.c...
compiling tcp_out.c...
compiling ip4.c...
compiling ip4_addr.c...
compiling ip4_frag.c...
compiling tcp.c...
compiling etharp.c...
compiling dhcp.c...
"ALM_ETH\ALM_ETH.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:04
